# diff-generator

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: cli.py  data_comparison.py  data_coparison.py  diff_generator.py  gendiff_func.py  generate_diff.py  parse.py  parser.py
gendiff/format_output/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_cli.py  test_gendiff.py
tests/fixtures/: answer_help_option.txt  answer_json_file1_file2_rec.txt  answer_plain_file1_file2_rec.txt  answer_stylish_file1_file2_rec.txt  file1.yaml  file1_rec.json  file1_rec.yaml  file2.yaml
